header overlaping on phone

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </header>
 
-  <main class="container" style="padding-top: var(--header-h);">
+  <main class="container">
     <section aria-labelledby="projects-title" class="block">
       <h2 id="projects-title">Projects</h2>
       <ul id="projects" class="tree"></ul>
